expand/collapse first bug comment

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ a:hover {
 
 .bug {
   padding: .5em;
+  cursor: pointer;
 }
 
 .bug:hover {
@@ -155,4 +156,17 @@ a:hover {
 
 .bug .mentor {
   color: #ccc;
+}
+
+.bug .comment {
+  font-size: .9em;
+  color: #696969;
+  width: 100%;
+  overflow: hidden;
+  margin: 1em 0 0 0;
+  display: none;
+}
+
+.bug.expanded .comment {
+  display: block;
 }
